--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join</title>
+    <title>Join</title> 
+
+    <script src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+     
 </body>
 </html>
