--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/fonts/fonts.css">
 </head>
 <body>
+
+    <h1>Test</h1>
      
 </body>
 </html>
