--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/templates/header/header.css">
     <link rel="stylesheet" href="./assets/fonts/fonts.css">
 </head>
-<body>
+<body onload="init()">
 
-    <h1>Test</h1>
+    <div w3-include-html="./assets/templates/header/header.html"></div>
+    
      
 </body>
 </html>
