--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./assets/templates/header/header.css">
+    <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css">
     <link rel="stylesheet" href="./assets/fonts/fonts.css">
 </head>
 <body onload="init()">
 
     <div w3-include-html="./assets/templates/header/header.html"></div>
-    
+    <div w3-include-html="./assets/templates/sidebar/sidebar.html"></div>
      
 </body>
 </html>
