--- a/index.html
+++ b/index.html
@@ -5,16 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title> 
 
+    <link rel="shortcut icon" href="./assets/img/Join logo vector.png" type="image/x-icon">
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./assets/templates/header/header.css">
-    <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css">
-    <link rel="stylesheet" href="./assets/fonts/fonts.css">
 </head>
-<body onload="init()">
-
-    <div w3-include-html="./assets/templates/header/header.html"></div>
-    <div w3-include-html="./assets/templates/sidebar/sidebar.html"></div>
+<body>
      
 </body>
 </html>
