--- a/test.html
+++ b/test.html
@@ -6,15 +6,28 @@
     <title>Join</title>
 
     <script src="./script.js"></script>
-    <link rel="stylesheet" href="./style.css" />
+    <style>
+      :root {
+        --main_color: #2a3647;
+        --main_color_dark: #091931;
+        --background_main: #f6f7f8;
+        --main_font: "Inter", sans-serif;
+        --backup_font: system-ui, sans-serif;
+      }
+
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: var(--main_font);
+        background-color: var(--background_main);
+      }
+    </style>
     <link rel="stylesheet" href="./assets/templates/header/header.css" />
     <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css" />
     <link rel="stylesheet" href="./assets/fonts/fonts.css" />
-  </head>
-  <body onload="init()">
-    <div class="templates">
-      <div w3-include-html="./assets/templates/sidebar/sidebar.html"></div>
-      <div w3-include-html="./assets/templates/header/header.html"></div>
-    </div>
-  </body>
+</head>
+<body onload="init()">
+    <div w3-include-html="./assets/templates/header/header.html"></div>
+    <div w3-include-html="./assets/templates/sidebar/sidebar.html"></div>
+</body>
 </html>
