--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join</title> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Join</title>
 
-    <link rel="shortcut icon" href="./assets/img/Join logo vector.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./assets/img/favicon_light.png"
+      type="image/x-icon"
+    />
     <script src="./script.js"></script>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-     
-</body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body></body>
 </html>
