change index.html for test

--- a/add_task.html
+++ b/add_task.html
@@ -61,6 +61,7 @@
                                     <h2>Category<span class="required_char">*</span></h2>
                                     <select name="" id="select_category" class="select" required>
                                         <option value="" disabled selected>Select task category</option>
+                                        <option value="test">test</option>
                                     </select>
                                 </label>
                                 <label for="input_subtask">
