--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <div>Hallo Welt!</div>
+  </body>
 </html>
