add prio active color

--- a/add_task.html
+++ b/add_task.html
@@ -46,14 +46,14 @@
                                 <label for="">
                                     <h2>Prio</h2>
                                     <div class="prio_category">
-                                        <span class="prio_category_span">
-                                            <h2>Urgent<span><img src="./assets/img/add_task/urgent_color.png"></span></h2>
+                                        <span class="prio_category_span" onclick="setActivePrio(0, 'urgent')">
+                                            <h2>Urgent<span><img id="prio_category_img0" src="./assets/img/add_task/urgent_color.png"></span></h2>
                                         </span>
-                                        <span class="prio_category_span">
-                                            <h2>Medium<span><img src="./assets/img/add_task/medium_color.png"></span></h2>
+                                        <span class="prio_category_span" onclick="setActivePrio(1, 'medium')">
+                                            <h2>Medium<span><img id="prio_category_img1" src="./assets/img/add_task/medium_color.png"></span></h2>
                                         </span>
-                                        <span class="prio_category_span">
-                                            <h2>Low<span><img src="./assets/img/add_task/low_color.png"></span></h2>
+                                        <span class="prio_category_span"onclick="setActivePrio(2, 'low')">
+                                            <h2>Low<span><img id="prio_category_img2" src="./assets/img/add_task/low_color.png"></span></h2>
                                         </span>
                                     </div>
                                 </label>
