--- a/add_task.html
+++ b/add_task.html
@@ -47,13 +47,13 @@
                                     <h2>Prio</h2>
                                     <div class="prio_category">
                                         <span class="prio_category_span" onclick="setActivePrio(0, 'urgent')">
-                                            <h2>Urgent<span><img id="prio_category_img0" src="./assets/img/add_task/urgent_color.png"></span></h2>
+                                            <h2 id="prio_headline0">Urgent<span><img id="prio_category_img0" src="./assets/img/add_task/urgent_color.png"></span></h2>
                                         </span>
                                         <span class="prio_category_span" onclick="setActivePrio(1, 'medium')">
-                                            <h2>Medium<span><img id="prio_category_img1" src="./assets/img/add_task/medium_color.png"></span></h2>
+                                            <h2 id="prio_headline1">Medium<span><img id="prio_category_img1" src="./assets/img/add_task/medium_color.png"></span></h2>
                                         </span>
                                         <span class="prio_category_span"onclick="setActivePrio(2, 'low')">
-                                            <h2>Low<span><img id="prio_category_img2" src="./assets/img/add_task/low_color.png"></span></h2>
+                                            <h2 id="prio_headline2">Low<span><img id="prio_category_img2" src="./assets/img/add_task/low_color.png"></span></h2>
                                         </span>
                                     </div>
                                 </label>
