--- a/add_task.html
+++ b/add_task.html
@@ -79,7 +79,7 @@
                                 <p><span class="required_char">*</span>This field is required</p>
                             </div>
                             <div class="form_button_container">
-                                <button class="form_button_clear">Clear</button>
+                                <button class="form_button_clear" id="clear_button" onclick="clear()">Clear</button>
                                 <button class="form_button_create" type="submit">Create Task</button>
                             </div>
                         </section>
