added landing_page responsiveness; changed img naming

--- a/landing_page.html
+++ b/landing_page.html
@@ -14,8 +14,11 @@
   </head>
   <body>
     <section class="landing_page">
-      <div class="landing_page_logo">
-        <img src="./assets/img/logoStartseite.png" alt="" />
+      <div class="landing_page_desktop">
+        <img src="./assets/img/logoStartseite.png" alt="Logo Desktop" />
+      </div>
+      <div class="landing_page_mobile">
+        <img src="./assets/img/landing_page/logo_hell.png" alt="Logo Mobile" />
       </div>
     </section>
   </body>
