--- a/summary.html
+++ b/summary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Summary</title>
     <link rel="stylesheet" href="./assets/css/summary.css">
     <link rel="stylesheet" href="./assets/fonts/fonts.css">
     <link rel="stylesheet" href="./assets/templates/header/header.css" />
@@ -19,10 +19,12 @@
     <div class="summary_container">
         <div class="summary_headline">
             <h1 class="join360">Join 360</h1>
-            <!-- <div class="summary_headline_stroke">|</div> -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="4" height="63" viewBox="0 0 4 63" fill="none">
+            <div class="summary_headline_stroke">
+                <img src="./assets/img/img_summary/strokeSummaryhead.png" alt="">
+            </div>
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="4" height="63" viewBox="0 0 4 63" fill="none">
                 <path d="M2 2V61" stroke="#29ABE2" stroke-width="3" stroke-linecap="round"/>
-                </svg>
+                </svg> -->
             <span class="summary_headline_text">Key Metrics at a Glance</span>
         </div>
         <div class="summary_main_container">
@@ -50,16 +52,17 @@
                                 <img src="./assets/img/img_summary/arrowsPointingUpRed.png" alt="">
                                 <div>
                                     <h2 class="summary_number">1</h2>
-                                    <span class="summary_text_small">Urgent</span>
+                                    <span class="summary_urgent_text">Urgent</span>
                                 </div>
                                 <div class="summary_stroke">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="2" height="106" viewBox="0 0 2 106" fill="none">
+                                    <img src="./assets/img/img_summary/strokeSummaryUrgent.png" alt="">
+                                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="2" height="106" viewBox="0 0 2 106" fill="none">
                                         <path d="M1 1.98828V104.011" stroke="#D1D1D1" stroke-width="2" stroke-linecap="round"/>
-                                    </svg>
+                                    </svg> -->
                                 </div>
                                 <div>
                                     <h4 class="summary_date">October 16, 2022</h4>
-                                    <span class="summary_text_small">Upcoming Deadline</span>
+                                    <span class="summary_urgent_text">Upcoming Deadline</span>
                                 </div>
                             </div>
                         </div>
@@ -67,15 +70,15 @@
                     <div class="summary_tasks">
                         <div class="summary_tasks_field">
                             <h2 class="summary_number">5</h2>
-                            <span class="summary_text_small">Tasks in <br> Board</span>
+                            <span class="summary_tasks_text">Tasks in <br> Board</span>
                         </div>
                         <div class="summary_tasks_field">
                             <h2 class="summary_number">2</h2>
-                            <span class="summary_text_small">Tasks in <br> Progress</span>
+                            <span class="summary_tasks_text">Tasks in <br> Progress</span>
                         </div>
                         <div class="summary_tasks_field">
                             <h2 class="summary_number">2</h2>
-                            <span class="summary_text_small">Awaiting <br> Feeback</span>
+                            <span class="summary_tasks_text">Awaiting <br> Feeback</span>
                         </div>
                     </div>
                 </div>
