change css settings

--- a/add_task.html
+++ b/add_task.html
@@ -65,7 +65,8 @@
                                     <h2>Category<span class="required_char">*</span></h2>
                                     <select name="" id="select_category" class="select" required>
                                         <option value="" disabled selected>Select task category</option>
-                                        <option value="test">test</option>
+                                        <option value="User Story">User Story</option>
+                                        <option value="Technical Task">Technical Task</option>
                                     </select>
                                 </label>
                                 <label for="input_subtask">
