--- a/add_task.html
+++ b/add_task.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/css/add_task.css">
     <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css">
     <link rel="stylesheet" href="./assets/templates/header/header.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body onload="init()">
 
@@ -71,7 +72,10 @@
                                 </label>
                                 <label for="input_subtask">
                                     <h2>Subtasks</h2>
-                                    <input type="text" id="input_subtask" placeholder="Add new subtask" class="input">
+                                    <div class="subtask_input">
+                                        <input type="text" id="input_subtask" placeholder="Add new subtask" class="input">
+                                        <span><button>+</button></span>
+                                    </div>
                                 </label>
                             </div>
                         </div>
