--- a/summary.html
+++ b/summary.html
@@ -32,14 +32,14 @@
                 <div>
                     <div class="summary_doings">
                         <div class="summary_todo">
-                            <img class="summary_img" src="./assets/img/img_summary/pen.png" alt="">
+                            <div class="summary_img"></div>
                             <div class="summary_todo_nummberAndText">
                                 <span class="summary_number">1</span>
                                 <span class="summary_text_small">To-do</span>
                             </div>
                         </div>
                         <div class="summary_todo">
-                            <img class="summary_img" src="./assets/img/img_summary/hook.png" alt="">
+                            <div class="summary_img_hook"></div>
                             <div class="summary_todo_nummberAndText">
                                 <span class="summary_number">1</span>
                                 <span class="summary_text_small">Done</span>
@@ -49,7 +49,7 @@
                     <div >
                         <div class="summary_urgent_container">
                             <div class="summary_urgent_field">
-                                <img src="./assets/img/img_summary/arrowsPointingUpRed.png" alt="">
+                                <img class="arrow_icon" src="./assets/img/img_summary/arrowsPointingUpRed.png" alt="">
                                 <div>
                                     <h2 class="summary_number">1</h2>
                                     <span class="summary_urgent_text">Urgent</span>
