add new subtask function

--- a/add_task.html
+++ b/add_task.html
@@ -76,8 +76,11 @@
                                     <h2>Subtasks</h2>
                                     <div class="subtask_input">
                                         <input type="text" id="input_subtask" placeholder="Add new subtask" class="input">
-                                        <span><button>+</button></span>
+                                        <span onclick="setSubTask()"><button type="button">+</button></span>
                                     </div>
+                                    <ul id="subtask_content">
+                                        
+                                    </ul>
                                 </label>
                             </div>
                         </div>
