add new subtask fuction

--- a/add_task.html
+++ b/add_task.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Task</title>
     <link rel="shortcut icon" href="./assets/img/favicon_light.png" type="image/x-icon">
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./assets/fonts/fonts.css">
     <link rel="stylesheet" href="./assets/css/add_task.css">
     <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css">
     <link rel="stylesheet" href="./assets/templates/header/header.css">
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 </head>
 <body onload="init()">
 
@@ -78,9 +78,9 @@
                                         <input type="text" id="input_subtask" placeholder="Add new subtask" class="input">
                                         <span onclick="setSubTask()"><button type="button">+</button></span>
                                     </div>
-                                    <ul id="subtask_content">
+                                    <div id="subtask_content">
                                         
-                                    </ul>
+                                    </div>
                                 </label>
                             </div>
                         </div>
