added Overlay.html + css

--- a/overlay.html
+++ b/overlay.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Overlay</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="assets/css/overlay.css" />
+  </head>
+  <body>
+    // Overlay User Story //
+    <section class="overlay">
+      <div class="overlay_header">
+        <span class="overlay_user_task">User Story</span>
+        <span class="close"
+          ><img
+            class="closeIcon"
+            src="./assets/img/img_summary/close.png"
+            alt=""
+        /></span>
+      </div>
+      <h1>Kochwelt Page & Recipe Recommender</h1>
+      <span class="overlay_text"
+        >Build start page with recipe recommendation</span
+      >
+      <div class="overlay_flex_field">
+        <div class="due_date">Due date:</div>
+        <div class="date">10/05/2023</div>
+      </div>
+      <div class="overlay_flex_field">
+        <div class="due_date">Priority:</div>
+        <div class="overlay_priority">
+          <div class="Priority">Medium</div>
+          <div>=</div>
+        </div>
+      </div>
+      <div class="stretch">
+        <div class="overlay_assigned_to">Assigned To:</div>
+        <div class="assigned_to_container">
+          <div class="assigned_to_field">
+            <div class="user_img">
+              <img src="./assets/img/img_summary/profilImg.png" alt="" />
+            </div>
+            <div class="user_name">Emmanuel Mauer</div>
+          </div>
+        </div>
+        <div class="assigned_to_container">
+          <div class="assigned_to_field">
+            <div class="user_img">
+              <img src="./assets/img/img_summary/profilImg.png" alt="" />
+            </div>
+            <div class="user_name">Emmanuel Mauer</div>
+          </div>
+        </div>
+      </div>
+      <div class="stretch">
+        <div class="overlay_subtasks">Subtasks</div>
+        <div class="subtasks_check">
+            <div class="subtask">
+                <div class="subtasks_check_field"><img src="./assets/img/img_summary/Checkbuttonfill.png" alt=""></div>
+                <span class="subtasks_check_text">Implement Recipe Recommendation</span>
+            </div>
+            <div class="subtask">
+                <div class="subtasks_check_field"><img src="./assets/img/img_summary/Checkbuttonempty.png" alt=""></div>
+                <span class="subtasks_check_text">Start Page Layout</span>
+            </div>
+        </div>
+      </div>
+      <div class="overlay_edit">
+        <div class="edit_area">
+            <img class="edit_area_img" src="./assets/img/img_summary/delete.png" alt="">
+            <span class="edit_text">Delete</span>
+        </div>
+        <img src="./assets/img/img_summary/Vector.png" alt="">
+        <div class="edit_area">
+            <img class="edit_area_img" src="./assets/img/img_summary/edit.png" alt="">
+            <span class="edit_text">Edit</span>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
