add first responsive design

--- a/add_task.html
+++ b/add_task.html
@@ -93,6 +93,7 @@
                                 <button class="form_button_create" type="submit">Create Task</button>
                             </div>
                         </section>
+                        <div class="mobile_sidebar_container"></div>
                     </div>
                 </form>
                 
