--- a/login.html
+++ b/login.html
@@ -10,6 +10,8 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./assets/css/login.css" />
+    <link rel="stylesheet" href="./style.css">
+    <script src="./js/login.js"></script>
   </head>
   <body>
     <section class="login_page_container">
@@ -17,12 +19,12 @@
         <img src="./assets/img/logIn/logo_desktop.png" alt="Join Logo" />
         <div class="sign_up_container">
           <p>Not a Join user?</p>
-          <img src="./assets/img/logIn/sign_up.png" alt="Sign up Button" />
+          <span class="sign_up_container_btn">Sign up</span>
         </div>
       </header>
 
       <main class="login_page_main">
-        <div class="login_card">
+        <section class="login_card">
           <div class="login_card_head">
             <h1>Log in</h1>
             <img src="./assets/img/logIn/seperator.png" alt="Seperation line" />
@@ -31,51 +33,53 @@
           <div class="login_card_center">
             <div class="login_input_container">
               <form class="login_input">
-                <input type="text" placeholder="E-Mail" />
+                <input type="text" id="email" placeholder="E-Mail" required/>
                 <button>
                   <img src="./assets/img/logIn/mail.png" alt="E-mail Button" />
                 </button>
               </form>
 
               <form class="login_input">
-                <input type="text" placeholder="Password" />
+                <input type="password" id="password" placeholder="Password" required/>
                 <button>
                   <img src="./assets/img/logIn/lock.png" alt="E-mail Button" />
                 </button>
               </form>
             </div>
 
-            <div class="login_check">
-              <img
-                src="./assets/img/logIn/check_button.png"
-                alt="Check Button"
-              />
-              <p>Remember me</p>
-            </div>
+            <div class="false_password"><!-- Wrong password Ups! Try again. --></div>
+
+            <form class="login_check">
+              <!-- <input type="checkbox" id="checkbox">
+              <label for="checkbox">Remember me</label> -->
+              <img id="checkbox" onclick="toggleCheckboxImage()" src="./assets/img/logIn/unchecked.png" alt="Checkbox"> Remember me
+            </form>
+
           </div>
 
           <!-- ----- -->
           <div class="login_card_foot">
-            <button class="foot_login_btn">Log in</button>
-            <button class="foot_guestlog_btn">Guest Log in</button>
-          </div>
-        </div>
-
-        <div style="display: none" class="login_card">
-          <div class="login_card_head">
-            <h1>Log in</h1>
-            <img src="" alt="" />
+            <span class="foot_login_btn">Log in</span>
+            <span class="foot_guestlog_btn">Guest Log in</span>
           </div>
 
-          <div class="login_card_center"></div>
+        </section>
 
-          <div class="login_card_foot"></div>
-        </div>
+            <!-- <div style="display: none" class="login_card">
+              <div class="login_card_head">
+                <h1>Log in</h1>
+                <img src="" alt="" />
+              </div>
+
+              <div class="login_card_center"></div>
+
+              <div class="login_card_foot"></div>
+            </div> -->
       </main>
 
       <footer class="login_page_bottom">
-        <a href="#">Privacy Policy</a>
-        <a href="#">Legal notice</a>
+        <a href="#">Privacy Policy</a>  <!-- Link fehlt noch -->
+        <a href="#">Legal notice</a>    <!-- Link fehlt noch -->
       </footer>
     </section>
   </body>
