summary resoposive update

--- a/overlay.html
+++ b/overlay.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Overlay</title>
     <link rel="stylesheet" href="assets/css/overlay.css" />
+    <link rel="stylesheet" href="assets/fonts/fonts.css">
   </head>
   <body>
     // Overlay User Story Edit//
