--- a/summary.html
+++ b/summary.html
@@ -26,6 +26,9 @@
                 <path d="M2 2V61" stroke="#29ABE2" stroke-width="3" stroke-linecap="round"/>
                 </svg> -->
             <span class="summary_headline_text">Key Metrics at a Glance</span>
+            <div class="summary_headline_stroke_mobile">
+                <img src="./assets/img/img_summary/strokeSummaryhead.png" alt="">
+            </div>
         </div>
         <div class="summary_main_container">
             <div class="summary_overview">
